Exposing variables and restructuring login & filter for custom auth